Fixed navbar collapsing on mobile

--- a/src/public/stylesheets/index.less
+++ b/src/public/stylesheets/index.less
@@ -25,6 +25,10 @@ body {
   }
 }
 
+.layout {
+  margin-top: 60px;
+}
+
 #logo {
   img {
     width: 100px;
